# HW02_X-Platform_SDK

./: .gitignore  CMakeLists.txt  README.md  build_project_window.bat
src/info/: version.h
src/sdk/: XPlatformSdk.cpp  XPlatformSdk.h
src/util/log/: logger.h
