CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

IF(POLICY CMP0091)
    CMAKE_POLICY(SET CMP0091 NEW)
ENDIF()

PROJECT(XPLATFORM_SDK)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE Release)

# Build date (YYYYMMDD)
STRING(TIMESTAMP BUILD_DATE "%Y%m%d")
ADD_COMPILE_DEFINITIONS(XPLATFORM_SDK_VERSION_DATE="${BUILD_DATE}")
MESSAGE(STATUS "Build date: ${BUILD_DATE}")

IF(MSVC)
    ADD_COMPILE_OPTIONS(/utf-8)
    MESSAGE(STATUS "MSVC: UTF-8 encoding enabled")

    # MFC 프로젝트 호환: 반드시 /MD (MultiThreadedDLL) 사용
    # MFC는 항상 동적 CRT를 사용하므로 DLL도 일치해야 힙 충돌 방지
    SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
    MESSAGE(STATUS "MSVC: Runtime library set to /MD (MultiThreadedDLL) for MFC compatibility")
ENDIF()

MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "Project: ${PROJECT_NAME}")

IF(WIN32 AND NOT DEFINED CMAKE_GENERATOR_PLATFORM)
    SET(CMAKE_GENERATOR_PLATFORM x64)
ENDIF()

# SOURCE (main.cpp 제외 - 공유 라이브러리에는 main 불필요)
SET(SOURCES

)

# SHARED LIBRARY
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

# Windows DLL export definition
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE XPLATFORM_SDK_EXPORTS)

# VISIBILITY
IF(UNIX)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        CXX_VISIBILITY_PRESET hidden
        VISIBILITY_INLINES_HIDDEN ON
        VERSION 1.0.0
        SOVERSION 1
    )
ENDIF()

# SDK 라이브러리 복사
SET(SDK_DIR ${CMAKE_BINARY_DIR}/sdk)

IF(WIN32)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${SDK_DIR}/bin"   # .dll
        ARCHIVE_OUTPUT_DIRECTORY "${SDK_DIR}/lib"   # .lib
    )
ENDIF()

MESSAGE(STATUS "SDK output directory: ${SDK_DIR}")

# INCLUDE
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    src
    # TODO: 3rdparty include 경로 추가
)

# LINK
IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
        # TODO: 3rdparty 라이브러리 추가
    )
ENDIF()